<resources>
    <string name="app_name">T.I.G</string>
    <string name="open_app_usage_setting">Open Apps with usage access settings</string>
    <string name="last_time_used">"Last time used: "</string>
    <string name="time_span">"Time span: "</string>

    <string name="display_order_text">Sort by:</string>
    <string name="app_name_label">App</string>
    <string name="last_time_used_label">Last time used</string>
    <!-- label for usage time -->
    <string name="usage_time_label">Usage time</string>

    <string name="sw">switch</string>
    <string name="off">off</string>
    <string name="on">on</string>

    <string name="button">button</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="every">Every</string>

    <string name="help" >help</string>
    <string name="chart_name">-Chart of your application Usages-</string>
    <string name="discription">Click this image to set your alarm Time!</string>
</resources>