<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jjd.timeisgold.MainActivity">


    <!--    <Button-->
    <!--        android:id="@+id/start_button"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Start"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.499" />-->

    <!--    <Button-->
    <!--        android:id="@+id/end_button"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="49dp"-->
    <!--        android:layout_marginEnd="1dp"-->
    <!--        android:text="Stop"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/start_button"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/start_button" />-->

    <Switch
        android:id="@+id/sw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:showText="@string/off"
        android:text=""
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:thumb="@drawable/switch_thumb_selector"
        android:track="@drawable/switch_track_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/sbtn"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/button"
        android:drawableBottom="@drawable/chartxml"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_help"
        android:layout_width="70dp"
        android:layout_height="57dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="10dp"
        android:onClick="helpDialog"
        android:text="@string/help"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_indicator"
        android:layout_width="296dp"
        android:layout_height="261dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="79dp"
        android:contentDescription="@string/discription"
        android:onClick="changeTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368"
        app:srcCompat="@drawable/indicator" />

    <ImageView
        android:id="@+id/image_coin"
        android:layout_width="137dp"
        android:layout_height="236dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="429dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/coin" />


</androidx.constraintlayout.widget.ConstraintLayout>